# NdkTest

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/ndktest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/ndktest/: BaseJNIActivity.java  MainActivity.java  MyApplication.java  NativeBase.java  VedioUtils.java
app/src/main/java/com/example/ndktest/base/: BaseActivity.java
app/src/main/java/com/example/ndktest/ffmpeg/: FFmpegTest.java  MyCallback.java  VedioSurface.java
app/src/main/java/com/example/ndktest/ui/: LableTextView.java
app/src/main/jni/: ffmpegTest.c  native-lib.c
app/src/main/res/drawable/: dw_divider.xml  ll_divider1.xml
app/src/main/res/layout/: activity_basejni.xml  activity_ffmpeg.xml  activity_main.xml  divider10.xml  layout_view_lable_text.xml
app/src/main/res/values/: colors.xml
gradle/wrapper/: gradle-wrapper.properties
